[project]
name = "jocasta"
version = "0.5.0"
description = "Fetch sensor data."
authors = [
    {name = "Chris Hannam", email = "ch@chrishannam.co.uk"},
]
dependencies = [
    "click",
    "confluent-kafka",
    "influxdb-client",
    "psutil",
    "pyserial",
    "tabulate",
    "tapo-plug",
    "pycrypto>=2.6.1",
    "pycryptodome>=3.17",
    "scd4x>=0.0.1",
]
license = {text = "MIT"}
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/chrishannam/jocasta"

[project.scripts]
jocasta = "jocasta.collector:main"
tapo = "jocasta.tapo:main"

[tool.black]
line-length = 120
target-version = ['py311']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
skip-string-normalization = true

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
