[project]
name = "jocasta"
version = "0.5.0"
description = "Fetch sensor data."
authors = [
    {name = "Chris Hannam", email = "ch@chrishannam.co.uk"},
]
dependencies = [
    "click",
    "confluent-kafka",
    "influxdb-client",
    "psutil",
    "pyserial",
    "tabulate",
    "tapo-plug",
    "pycrypto>=2.6.1",
    "pycryptodome>=3.17",
    "scd4x>=0.0.1",
]
license = {text = "MIT"}
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/chrishannam/jocasta"

[project.scripts]
jocasta = "jocasta.collector:main"
tapo = "jocasta.tapo:main"


[tool.poetry]
name = "jocasta"
version = "0.5.0"
description = ""
authors = ["Chris Hannan <ch@chrishannam.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyserial = "^3.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-sugar = "^0.9.7"

[tool.poetry.group.test.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = [ "py311"]

[tool.ruff]
line-length = 120
